example/errors/interpret/nfdiel.boxx
when true {
} alt when false {
}
